@@ -1,3 +1,10 @@
+2010-12-28  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* m4/ax_prog_doxygen.m4: Sync with newest version of
+	ax_prog_doxygen.m4 from
+	<http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git>.
+	* m4/doxygen.m4: Likewise.
+
 2010-12-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* m4/boost.m4: Sync with newest version of boost.m4 from
